Update gif reference

--- a/_config.yml
+++ b/_config.yml
@@ -20,13 +20,13 @@ darkmode: false
 
 # Social links
 # twitter_username: jekyllrb
-# github_username:  jekyll
+github_username:  miliuumeru
 # stackoverflow_username: "00000001"
 # dribbble_username: jekyll
 # facebook_username: jekyll
 # flickr_username: jekyll
-# instagram_username: jekyll
-# linkedin_username: jekyll
+instagram_username: red_milian
+linkedin_username: huanhuan chen
 # xing_username: jekyll
 # pinterest_username: jekyll
 # youtube_username: jekyll
@@ -62,21 +62,21 @@ content:
         border: weak  # Value of `weak` will display a weak border below this item. # Any 
                       # other value (or no value) means no border will be displayed
         title: Personal Animation <SEED>
-        link: https://youtu.be/9jc6oblx0aY
-        link_text: Watch it on YouTube
-        # additional_links:
-        #   - title:  Github page for project (eg. sproogen/modern-resume-theme)
-        #     icon: fab fa-github
-        #     url: Link to project (eg. sproogen.github.io/modern-resume-theme)(optional)
-        #   - title:  Github page for project (eg. sproogen/modern-resume-theme)
-        #     icon: fab fa-github
-        #     url: Link to project (eg. sproogen.github.io/modern-resume-theme)(optional)
+        # link: https://youtu.be/9jc6oblx0aY
+        # link_text: Watch it on YouTube
+        additional_links:
+          - title:  YouTube page for project
+            icon: fab fa-youtube
+            url: https://youtu.be/9jc6oblx0aY
+          - title:  Vimeo page for project
+            icon: fab fa-vimeo
+            url: https://vimeo.com/1137545512
         quote: |
-          ![view](images/SEED_1.gif)
-          ![view](images/SEED_2.gif)
-          ![view](images/SEED_3.gif)
+          images/SEED_1.gif
+          images/SEED_2.gif
+          images/SEED_3.gif
         description: | # this will include new lines to allow paragraphs
-          Description about the work on/with the project
+          Created in Maya and RenderMan. All visuals were crafted by me, and the music was composed by a friend.
   - title: Experience
     layout: list
     content:
