--- a/_config.yml
+++ b/_config.yml
@@ -72,9 +72,9 @@ content:
             icon: fab fa-vimeo
             url: https://vimeo.com/1137545512
         quote: |
-          images/SEED_1.gif
-          images/SEED_2.gif
-          images/SEED_3.gif
+          ![](images/SEED_1.gif)
+          ![](images/SEED_2.gif)
+          ![](images/SEED_3.gif)
         description: | # this will include new lines to allow paragraphs
           Created in Maya and RenderMan. All visuals were crafted by me, and the music was composed by a friend.
   - title: Experience
