--- a/_config.yml
+++ b/_config.yml
@@ -71,11 +71,14 @@ content:
           - title:  Vimeo page for project
             icon: fab fa-vimeo
             url: https://vimeo.com/1137545512
-        quote: |
-          - Images ![alt text](/images/SEED_1.gif "SEED")
-          - Images ![alt text](/images/SEED_2.gif "SEED")
-          - Images ![alt text](/images/SEED_3.gif "SEED")
+        image: |
+          ![alt text](/images/SEED_1.gif "SEED")
+          ![alt text](/images/SEED_2.gif "SEED")
+          ![alt text](/images/SEED_3.gif "SEED")
         description: | # this will include new lines to allow paragraphs
+          ![](/images/SEED_1.gif)
+          ![](/images/SEED_2.gif)
+          ![](/images/SEED_3.gif)
           Created in Maya and RenderMan. All visuals were crafted by me, and the music was composed by a friend.
   - title: Experience
     layout: list
