--- a/_config.yml
+++ b/_config.yml
@@ -75,6 +75,9 @@ content:
           ![alt text](/images/landscape-trees.jpg "SEED")
           ![alt text](/images/SEED_2.gif "SEED")
           ![alt text](/images/SEED_3.gif "SEED")
+        about_profile_image: images/Avatar.png
+        image: images/Avatar.png
+        image: /images/landscape-trees.jpg
         description: | # this will include new lines to allow paragraphs
           ![](/images/landscape-trees.jpg)
           ![](/images/SEED_2.gif)
