--- a/_config.yml
+++ b/_config.yml
@@ -85,6 +85,9 @@ content:
       Created with Maya and RenderMan. All visuals were crafted by me, and the music was composed by a friend.
 
       **Preview clip**
+      ![](images/SEED_4.png)
+      ![](images/SEED_5.png)
+      ![](images/SEED_6.png)
 
       ![](images/SEED_1.gif)
       ![](images/SEED_2.gif)
