--- a/_config.yml
+++ b/_config.yml
@@ -85,7 +85,10 @@ content:
       Created with Maya and RenderMan. All visuals were crafted by me, and the music was composed by a friend.
 
       **Preview clip**
-      
+      ![](images/SEED_7.jpg)
+      ![](images/SEED_8.jpg)
+      ![](images/SEED_9.jpg)
+   
       ![](images/SEED_4.png)
       ![](images/SEED_5.png)
       ![](images/SEED_6.png)
