--- a/_config.yml
+++ b/_config.yml
@@ -86,6 +86,7 @@ content:
 
 
       **Preview clip**
+
       ![](images/SEED_7.jpg)
       ![](images/SEED_8.jpg)
       ![](images/SEED_9.jpg)
@@ -104,8 +105,15 @@ content:
 
       Complete end-to-end production: modeling, rendering, 3D printing, and hand-painting.
 
-      **Preview clip**
       ![](images/Printing.jpg)
+  - title: Modeling & Rendering
+    layout: text
+    content: |
+      ![](images/Render_Poster.jpg)
+
+      ![](images/Render_1.mp4)
+      ![](images/Render_2.jpg)
+      ![](images/Render_3.jpg)
   - title: Experience
     layout: list
     content:
