--- a/_config.yml
+++ b/_config.yml
@@ -115,6 +115,12 @@ content:
 
       ![](images/Pet.gif)
       ![](images/Pet_Script.jpg)
+
+      ![](images/Hair_Poster.jpg)
+
+      Auto hair-binding rigging tool for Maya.
+
+      ![](images/YJ_2.gif)
   - title: 3D Printing
     layout: text
     content: |
@@ -176,10 +182,6 @@ content:
           Hair and cloth simulation.
 
           ![](images/YJ.gif)
-
-          Auto hair-binding rigging tool for Maya.
-
-          ![](images/YJ_2.gif)
   - title: Education
     layout: list
     content:
