--- a/_config.yml
+++ b/_config.yml
@@ -118,6 +118,8 @@ content:
 
       ![](images/Hair_Poster.jpg)
 
+      Source code on [**GitHub**](https://github.com/miliuumeru/ml_hair_rigging)
+
       Auto hair-binding rigging tool for Maya.
 
       ![](images/YJ_2.gif)
