--- a/_config.yml
+++ b/_config.yml
@@ -93,9 +93,9 @@ content:
 
       **Preview clip**
 
-      ![](images/SEED_4.png)
-      ![](images/SEED_5.png)
-      ![](images/SEED_6.png)
+      ![](images/SEED_4.jpg)
+      ![](images/SEED_5.jpg)
+      ![](images/SEED_6.jpg)
 
       ![](images/SEED_7.jpg)
       ![](images/SEED_8.jpg)
