--- a/_config.yml
+++ b/_config.yml
@@ -174,9 +174,17 @@ content:
 
       This is a world-building concept set in a fantastical post-apocalyptic landscape. In this world, living creatures scavenge mechanical remnants scattered across the ruined world and graft them onto their own bodies. Over time, this behavior triggers species-wide mutation.
 
-      **Creature concept**
+
+      **Hostile creature concept**
+
+      Design draft
 
       ![](images/Biopunk_2.jpg)
+
+      **Creature concept**
+
+      Final design, through 3D modeling, rendering, and digital paint-over.
+
       ![](images/Biopunk_1.jpg)
   - title: 3D Printing
     layout: text
